Revert "feat(styles): improve configurability, add tailwind"
This reverts commit daa958585f8eca000f4b4c30f4dbb9a771829269.

--- a/projects/editor/src/lib/edit-field/edit-field.component.html
+++ b/projects/editor/src/lib/edit-field/edit-field.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group mat-stretch-tabs>
-    <mat-tab label="Properties">
+    <mat-tab label="General">
         <div class="tree-container">
             <editor-object-property
                 [target]="activeFieldTarget"
@@ -16,7 +16,6 @@
         <div class="styling-wrapper">
             <editor-styles
                 [editField]="activeFieldTarget"
-                [parentField]="parentField"
                 (fieldChanged)="fieldChanged.emit($event)"
             >
             </editor-styles>
