--- a/projects/editor/src/lib/property/expression-properties-property/expression-properties-property.component.scss
+++ b/projects/editor/src/lib/property/expression-properties-property/expression-properties-property.component.scss
@@ -1,24 +1,20 @@
 :host {
-    display: flex;
-    column-gap: 8px;
-}
-
-.simplified-panel {
-    flex-grow: 1;
+    display: block;
 }
 
 .simplified-header {
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    margin-right: 16px;
     padding: 8px 0;
     cursor: pointer;
 }
 
 .simplified-header-left {
-    flex-grow: 1;
+    display: inline-flex;
+    align-items: center;
+    column-gap: 8px;
+    min-height: 32px;
 }
 .simplified-header-right {
     display: inline-flex;
@@ -45,6 +41,11 @@
     display: block;
 }
 
+.mat-expansion-panel {
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-shadow: none !important;
+}
+
 .mat-expansion-panel-header-title {
     padding: 0 2px;
 }
@@ -54,6 +55,5 @@
 }
 
 .override-indicator {
-    margin-top: 8px;
     height: 32px;
 }
